platform-infra/gitops-k8s/platform-components/components/keda/base/templates/webhooks/validatingconfiguration.yaml
---
# Source: keda/templates/webhooks/validatingconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: keda-admission-webhooks    
    helm.sh/chart: keda-2.18.3
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.18.3
    app.kubernetes.io/instance: keda
  name: keda-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: platform-monitoring
      path: /validate-keda-sh-v1alpha1-scaledobject
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vscaledobject.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scaledobjects
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: platform-monitoring
      path: /validate-keda-sh-v1alpha1-scaledjob
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vscaledjob.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scaledjobs
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: platform-monitoring
      path: /validate-keda-sh-v1alpha1-triggerauthentication
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vstriggerauthentication.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - triggerauthentications
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: platform-monitoring
      path: /validate-keda-sh-v1alpha1-clustertriggerauthentication
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vsclustertriggerauthentication.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clustertriggerauthentications
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: platform-monitoring
      path: /validate-eventing-keda-sh-v1alpha1-cloudeventsource
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vcloudeventsource.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - eventing.keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cloudeventsources
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: keda-admission-webhooks
      namespace: platform-monitoring
      path: /validate-eventing-keda-sh-v1alpha1-clustercloudeventsource
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vclustercloudeventsource.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - eventing.keda.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clustercloudeventsources
  sideEffects: None
  timeoutSeconds: 10
